--- a/src/v00v.Views/Application/MainWindow.xaml
+++ b/src/v00v.Views/Application/MainWindow.xaml
@@ -1,10 +1,6 @@
-<Window x:Class="v00v.Views.Application.MainWindow"
-        xmlns="https://github.com/avaloniaui"
+<Window x:Class="v00v.Views.Application.MainWindow" xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:views="clr-namespace:v00v.Views.Application;assembly=v00v.Views"
-        Width="1200" 
-        Height="600"
-        Title="{Binding WindowTitle, Mode=OneWay}"
-        >
-    <views:MainView/>
+        xmlns:views="clr-namespace:v00v.Views.Application;assembly=v00v.Views" Width="1200" Height="600"
+        Title="{Binding WindowTitle, Mode=OneWay}">
+    <views:MainView />
 </Window>
