--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -1,12 +1,8 @@
-﻿<UserControl
-    x:Class="v00v.Views.Playlists.PlaylistControl"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns="https://github.com/avaloniaui"
-    xmlns:playlist="clr-namespace:v00v.Views.Playlists"
-    >
+﻿<UserControl x:Class="v00v.Views.Playlists.PlaylistControl" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns="https://github.com/avaloniaui" xmlns:playlist="clr-namespace:v00v.Views.Playlists">
     <Expander IsExpanded="False" ExpandDirection="Left">
         <Expander.Header>
-            <StackPanel Orientation="Vertical"> 
+            <StackPanel Orientation="Vertical">
                 <TextBlock Text="P" />
                 <TextBlock Text="L" />
                 <TextBlock Text="A" />
@@ -20,72 +16,75 @@
         </Expander.Header>
         <Grid Width="220" ColumnDefinitions="*,auto" RowDefinitions="46,*" Background="#242e44">
             <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,9,8,9"
-                     Text="{Binding SearchText, Mode=TwoWay}" ToolTip.Tip="Search"/>
-            <ListBox Grid.Row="1" Grid.ColumnSpan="2"
-                     Items="{Binding Entries, Mode=OneWay}"
-                     VirtualizationMode="Simple"
-                     SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
-                     BorderThickness="0"
-                     ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                     Background="Transparent">
+                     Text="{Binding SearchText, Mode=TwoWay}" ToolTip.Tip="Search" />
+            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Items="{Binding Entries, Mode=OneWay}"
+                     VirtualizationMode="Simple" SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
+                     BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" Background="Transparent">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <playlist:PlaylistEntryControl/>
+                        <playlist:PlaylistEntryControl />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
                 <ListBox.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link" 
+                        <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}"
+                                  CommandParameter="link"
                                   IsVisible="{Binding !SelectedEntry.IsStatePlaylist, Mode=OneWay}">
                             <MenuItem.Icon>
-                                <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="title" 
+                        <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}"
+                                  CommandParameter="title"
                                   IsVisible="{Binding !SelectedEntry.IsStatePlaylist, Mode=OneWay}">
                             <MenuItem.Icon>
-                                <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneWay}">
                             <MenuItem.Icon>
-                                <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp"/>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Download">
                             <MenuItem.Icon>
-                                <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
-                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="simple">
+                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      CommandParameter="simple">
                                 <MenuItem.Icon>
-                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
+                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      CommandParameter="hd">
                                 <MenuItem.Icon>
-                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp"/>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="audio">
+                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      CommandParameter="audio">
                                 <MenuItem.Icon>
-                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp"/>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="video">
+                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      CommandParameter="video">
                                 <MenuItem.Icon>
-                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp"/>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="subs">
+                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      CommandParameter="subs">
                                 <MenuItem.Icon>
-                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp"/>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
                         </MenuItem>
                         <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}">
                             <MenuItem.Icon>
-                                <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
                     </ContextMenu>
@@ -100,11 +99,11 @@
             <Setter Property="Background" Value="#1b2333" />
             <Setter Property="BorderBrush" Value="#3a455a" />
         </Style>
-        
+
         <Style Selector="TextBox /template/ Border">
             <Setter Property="CornerRadius" Value="4" />
         </Style>
-        
+
         <Style Selector="Button">
             <Setter Property="Width" Value="26" />
             <Setter Property="Height" Value="26" />
@@ -114,61 +113,61 @@
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="Transparent" />
         </Style>
-        
+
         <Style Selector="Button Image">
             <Setter Property="Width" Value="14" />
             <Setter Property="Height" Value="14" />
             <Setter Property="Opacity" Value="0.8" />
         </Style>
-        
+
         <Style Selector="Button Ellipse">
             <Setter Property="Width" Value="24" />
             <Setter Property="Height" Value="24" />
             <Setter Property="Fill" Value="#435270" />
             <Setter Property="Opacity" Value="0.8" />
         </Style>
-        
+
         <Style Selector="ListBox">
             <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Margin" Value="0"/>
-            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Padding" Value="0" />
         </Style>
-        
+
         <Style Selector="ListBoxItem">
-            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Padding" Value="0" />
         </Style>
-        
+
         <Style Selector="ListBoxItem:selected /template/ ContentPresenter">
             <Setter Property="Background" Value="Transparent" />
         </Style>
-        
+
         <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter">
             <Setter Property="Background" Value="Transparent" />
         </Style>
-        
+
         <Style Selector="ListBoxItem Grid">
-            <Setter Property="Margin" Value="6,2,0,2"/>
+            <Setter Property="Margin" Value="6,2,0,2" />
         </Style>
-        
+
         <Style Selector="ListBoxItem Grid > Border">
             <Setter Property="CornerRadius" Value="10,10,10,10" />
             <Setter Property="Padding" Value="3,0,8,0" />
         </Style>
-        
+
         <Style Selector="ListBoxItem:selected Grid > Border">
             <Setter Property="Background" Value="#435270" />
         </Style>
-        
+
         <Style Selector="ListBoxItem Panel.Title">
-            <Setter Property="Margin" Value="6,3,2,3"/>
+            <Setter Property="Margin" Value="6,3,2,3" />
         </Style>
-        
+
         <Style Selector="ListBoxItem Panel.Indicator">
-            <Setter Property="Margin" Value="2,3,8,3"/>
+            <Setter Property="Margin" Value="2,3,8,3" />
         </Style>
-        
+
         <Style Selector="ListBoxItem TextBlock">
-            <Setter Property="Foreground" Value="#92a3b3"/>
+            <Setter Property="Foreground" Value="#92a3b3" />
         </Style>
 
         <Style Selector="ListBoxItem Panel.Indicator > Border">
@@ -177,11 +176,11 @@
             <Setter Property="Background" Value="#435270" />
             <Setter Property="CornerRadius" Value="10" />
         </Style>
-        
+
         <Style Selector="ListBoxItem Panel.Indicator > Border > TextBlock">
             <Setter Property="FontSize" Value="11" />
         </Style>
-        
+
         <Style Selector="ListBoxItem:selected Panel.Indicator > Border">
             <Setter Property="Background" Value="#242e44" />
         </Style>
