--- a/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
+++ b/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
@@ -1,36 +1,36 @@
-﻿<UserControl
-    x:Class="v00v.Views.Popup.Channel.ChannelPopupControl"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns="https://github.com/avaloniaui"
-    xmlns:channeltag="clr-namespace:v00v.Views.Popup.Channel"
-    xmlns:controls="clr-namespace:v00v.Views.Controls"
-    >
+﻿<UserControl x:Class="v00v.Views.Popup.Channel.ChannelPopupControl"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns="https://github.com/avaloniaui"
+             xmlns:channeltag="clr-namespace:v00v.Views.Popup.Channel"
+             xmlns:controls="clr-namespace:v00v.Views.Controls">
     <Grid RowDefinitions="auto,auto,auto,auto,auto,auto" MaxWidth="380">
         <controls:ExtendedTextBox Grid.Row="0" ToolTip.Tip="{Binding SubTitle, Mode=OneWay}" Watermark="Id (required)"
-            IsReadOnly="{Binding !IsChannelEnabled, Mode=OneWay}" Text="{Binding ChannelId, Mode=TwoWay}"/>
-        <controls:ExtendedTextBox Grid.Row="1" Watermark="Title (optional)" Text="{Binding ChannelTitle, Mode=TwoWay}"/>
+                                  IsReadOnly="{Binding !IsChannelEnabled, Mode=OneWay}"
+                                  Text="{Binding ChannelId, Mode=TwoWay}" />
+        <controls:ExtendedTextBox Grid.Row="1" Watermark="Title (optional)" Text="{Binding ChannelTitle, Mode=TwoWay}" />
         <Grid Grid.Row="2" ColumnDefinitions="auto,auto,*" Margin="0,15,0,0">
             <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}">
-                <TextBlock Text="Add"/>
+                <TextBlock Text="Add" />
             </Button>
             <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}">
                 <TextBlock Text="Save" />
             </Button>
         </Grid>
         <StackPanel Grid.Row="3" Orientation="Horizontal">
-            <TextBox Width="185" IsEnabled="{Binding SelectedTag.IsEditable, Mode=OneWay}" Margin="0,0,0,10" Watermark="Tag" Text="{Binding SelectedTag.Text, Mode=TwoWay}"/>
-            <TextBox Width="185" Margin="10,0,0,10" Watermark="Search" Text="{Binding FilterTag, Mode=TwoWay}"/>
+            <TextBox Width="185" IsEnabled="{Binding SelectedTag.IsEditable, Mode=OneWay}" Margin="0,0,0,10"
+                     Watermark="Tag" Text="{Binding SelectedTag.Text, Mode=TwoWay}" />
+            <TextBox Width="185" Margin="10,0,0,10" Watermark="Search" Text="{Binding FilterTag, Mode=TwoWay}" />
         </StackPanel>
         <ListBox Grid.Row="4" Items="{Binding Entries}" SelectedItem="{Binding SelectedTag, Mode=TwoWay}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <channeltag:TagItemControl/>
+                    <channeltag:TagItemControl />
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
         <Grid Grid.Row="5">
-            <Button IsEnabled="{Binding !IsWorking, Mode=OneWay}" Classes="Link" Command="{Binding CloseChannelCommand, Mode=OneWay}">
-                <TextBlock Text="{Binding CloseText, Mode=OneWay}"/>
+            <Button IsEnabled="{Binding !IsWorking, Mode=OneWay}" Classes="Link"
+                    Command="{Binding CloseChannelCommand, Mode=OneWay}">
+                <TextBlock Text="{Binding CloseText, Mode=OneWay}" />
             </Button>
         </Grid>
     </Grid>
@@ -40,12 +40,12 @@
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="BorderBrush" Value="#727985" />
         </Style>
-        
+
         <Style Selector="ListBox CheckBox">
             <Setter Property="Height" Value="24" />
             <Setter Property="Margin" Value="0" />
         </Style>
-        
+
         <Style Selector="Button">
             <Setter Property="MinWidth" Value="26" />
             <Setter Property="Height" Value="26" />
@@ -54,48 +54,48 @@
             <Setter Property="Foreground" Value="#ffffff" />
             <Setter Property="BorderThickness" Value="0" />
         </Style>
-        
+
         <Style Selector="Button /template/ ContentPresenter">
             <Setter Property="CornerRadius" Value="4" />
         </Style>
-        
+
         <Style Selector="Button Image">
             <Setter Property="Width" Value="14" />
             <Setter Property="Height" Value="14" />
         </Style>
-        
+
         <Style Selector="Button TextBlock">
             <Setter Property="Margin" Value="5,0" />
         </Style>
-        
+
         <Style Selector="Button.Link">
             <Setter Property="Margin" Value="0,8,0,0" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="BorderThickness" Value="0" />
         </Style>
-        
+
         <Style Selector="Button.Link TextBlock">
             <Setter Property="Foreground" Value="#5195e1" />
         </Style>
-        
+
         <Style Selector="RadioButton">
             <Setter Property="Height" Value="24" />
             <Setter Property="Margin" Value="0,16,0,0" />
         </Style>
-        
+
         <Style Selector="CheckBox">
             <Setter Property="Height" Value="24" />
             <Setter Property="Margin" Value="0,0,0,8" />
         </Style>
-        
+
         <Style Selector="TextBox">
             <Setter Property="Height" Value="28" />
             <Setter Property="Margin" Value="0,8,0,0" />
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="BorderBrush" Value="#727985" />
         </Style>
-        
+
         <Style Selector="TextBox /template/ Border">
             <Setter Property="CornerRadius" Value="4" />
         </Style>
